--- a/Cube/Cube/ViewController.xib
+++ b/Cube/Cube/ViewController.xib
@@ -13,12 +13,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
                 <outlet property="containerView" destination="iAR-F7-USY" id="itV-4c-mJY"/>
-                <outletCollection property="faces" destination="Ml8-m8-zzL" id="FPO-2y-tvW"/>
-                <outletCollection property="faces" destination="X50-5w-R8r" id="FoF-JN-iPy"/>
-                <outletCollection property="faces" destination="FK4-C6-CYM" id="A7y-UG-oeP"/>
-                <outletCollection property="faces" destination="rjM-QF-2Z0" id="W4p-6t-vc4"/>
-                <outletCollection property="faces" destination="nIg-S2-ltu" id="tRs-Wp-Qfd"/>
-                <outletCollection property="faces" destination="OCp-hv-GGH" id="9Rp-5a-miH"/>
+                <outlet property="view" destination="iN0-l3-epB" id="TNM-lk-h51"/>
+                <outletCollection property="faces" destination="X50-5w-R8r" id="vW5-6l-1DE"/>
+                <outletCollection property="faces" destination="Ml8-m8-zzL" id="3DV-l9-lNR"/>
+                <outletCollection property="faces" destination="FK4-C6-CYM" id="1Uj-qv-k7E"/>
+                <outletCollection property="faces" destination="nIg-S2-ltu" id="gXe-Bt-QZM"/>
+                <outletCollection property="faces" destination="OCp-hv-GGH" id="B6z-i9-o5x"/>
+                <outletCollection property="faces" destination="rjM-QF-2Z0" id="L4U-HZ-pe0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,10 +29,10 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iAR-F7-USY">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="iAR-F7-USY" secondAttribute="bottom" id="fsz-L0-6om"/>
                 <constraint firstItem="iAR-F7-USY" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="iHn-yL-L4Y"/>
@@ -39,10 +40,10 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="iAR-F7-USY" secondAttribute="trailing" id="mdC-qk-bPO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-366" y="-7"/>
+            <point key="canvasLocation" x="-645" y="-19"/>
         </view>
         <view contentMode="scaleToFill" id="X50-5w-R8r">
-            <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DSP-G8-Z4Y">
@@ -60,7 +61,7 @@
             <point key="canvasLocation" x="-250.5" y="563.5"/>
         </view>
         <view contentMode="scaleToFill" id="Ml8-m8-zzL">
-            <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K8E-ep-zqV">
@@ -75,10 +76,10 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="kOv-Fk-YAg"/>
-            <point key="canvasLocation" x="38" y="564"/>
+            <point key="canvasLocation" x="37.5" y="563.5"/>
         </view>
         <view contentMode="scaleToFill" id="FK4-C6-CYM">
-            <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P4Q-Qc-K3G">
@@ -96,7 +97,7 @@
             <point key="canvasLocation" x="318" y="564"/>
         </view>
         <view contentMode="scaleToFill" id="nIg-S2-ltu">
-            <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fu-be-Mzo">
@@ -114,7 +115,7 @@
             <point key="canvasLocation" x="-251" y="827"/>
         </view>
         <view contentMode="scaleToFill" id="OCp-hv-GGH">
-            <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ux-yO-Syg">
@@ -132,7 +133,7 @@
             <point key="canvasLocation" x="47" y="827"/>
         </view>
         <view contentMode="scaleToFill" id="rjM-QF-2Z0">
-            <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SKf-XV-tHd">
